feat: add RoscomVPN routing support
